entry_details.html stuffed

--- a/sophie/templates/entry_details.html
+++ b/sophie/templates/entry_details.html
@@ -3,3 +3,8 @@
 {% block navi %}
 {% include 'sidebar.html' %}
 {% endblock navi %}
+
+{% block main %}
+<h3 id="entry-title">{{ entry.title }}</h3>
+<div id="entry-body">{{ entry.body_html|safe }}</div>
+{% endblock main %}
