outlined entry_list.html

--- a/sophie/templates/entry_details.html
+++ b/sophie/templates/entry_details.html
@@ -5,6 +5,6 @@
 {% endblock navi %}
 
 {% block main %}
-<h3 id="entry-title">{{ entry.title }}</h3>
-<div id="entry-body">{{ entry.body_html|safe }}</div>
+<h3 class="entry-title">{{ entry.title }}</h3>
+<div class="entry-body">{{ entry.body_html|safe }}</div>
 {% endblock main %}
