--- a/sophie/templates/entry_list.html
+++ b/sophie/templates/entry_list.html
@@ -3,3 +3,32 @@
 {% block navi %}
 {% include 'sidebar.html' %}
 {% endblock navi %}
+
+{% block main %}
+<div id="entry_list">
+    {% for entry in page.object_list %}
+    <h3>entry.title</h3>
+    {% if blog.full_entry_in_page %}
+        <div>{{ entry.body_html|safe }}</div>
+    {% else %}
+        <div>{{ entry.teaser_html|safe }}</div>
+    {% endif %}
+    {% endfor %}
+</div>
+
+<div id="pagination">
+    {% if page.has_previous %}
+    <div id="previous-page-link">
+        <a href="{% url entry_list_view blog_slug=blog.slug page_num=page.previous_page_number %}">Previous Page</a>
+    </div>
+    {% endif %}
+    {% if page.has_next %}
+    <div id="next-page-link">
+    <a href="{% url entry_list_view blog_slug=blog.slug page_num=page.next_page_number %}">Next Page</a>
+    </div>
+    {% endif %}
+    {% if page.has_other_pages %}
+    This is page {{ page.number }} of {{ page.paginator.count }}
+    {% endif %}
+</div>
+{% endblock main%}
