--- a/sophie/templates/category_details.html
+++ b/sophie/templates/category_details.html
@@ -3,3 +3,20 @@
 {% block navi %}
 {% include 'sidebar.html' %}
 {% endblock navi %}
+
+{% block main %}
+<div id="page-description">
+    The content of this page is under {{ categoty.title }}
+</div>
+
+{% for entry in page.object_list %}
+    <h2 class="entry-title">{{ entry.title }}</h2>
+    <div class="entry-body">
+    {% if blog.show_full_entry %}
+        {{ entry.body_html|safe }}
+    {% else %}
+        {{ entry.teaser_html|safe }}
+    {% endif %}
+    </div>
+{% endfor %}
+{% endblock main %}
