--- a/sophie/templates/entry_list.html
+++ b/sophie/templates/entry_list.html
@@ -7,7 +7,7 @@
 {% block main %}
 <div id="entry_list">
     {% for entry in page.object_list %}
-    <h3>entry.title</h3>
+    <h3>{{ entry.title }}</h3>
     {% if blog.full_entry_in_page %}
         <div>{{ entry.body_html|safe }}</div>
     {% else %}
@@ -19,12 +19,12 @@
 <div id="pagination">
     {% if page.has_previous %}
     <div id="previous-page-link">
-        <a href="{% url entry_list_view blog_slug=blog.slug page_num=page.previous_page_number %}">Previous Page</a>
+        <a href="{% url entry_list_view blog_slug=blog.slug page_num=page.previous_page_number %}">newer posts</a>
     </div>
     {% endif %}
     {% if page.has_next %}
     <div id="next-page-link">
-    <a href="{% url entry_list_view blog_slug=blog.slug page_num=page.next_page_number %}">Next Page</a>
+    <a href="{% url entry_list_view blog_slug=blog.slug page_num=page.next_page_number %}">older posts</a>
     </div>
     {% endif %}
     {% if page.has_other_pages %}
