some get mothods for Blog and Category

--- a/sophie/templates/sidebar.html
+++ b/sophie/templates/sidebar.html
@@ -1,6 +1,6 @@
 <h3>Category</h3>
 <ul>
-    {% for category in category_list %}
+    {% for category in blog.get_categories %}
     <li>
     <a href="{{ category.get_absolute_url }}">
         {{ category.title }}
