added empty tag

--- a/sophie/templates/category_details.html
+++ b/sophie/templates/category_details.html
@@ -18,5 +18,7 @@
         {{ entry.teaser_html|safe }}
     {% endif %}
     </div>
+{% empty %}
+    Ooops, there's nothing here yet, too bad.
 {% endfor %}
 {% endblock main %}
