--- a/sophie/templates/category_details.html
+++ b/sophie/templates/category_details.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+{{ category.title }}-{{ blog.title }}
+{% endblock title %}
+
 {% block navi %}
 {% include 'sidebar.html' %}
 {% endblock navi %}
