--- a/sophie/templates/entry_list.html
+++ b/sophie/templates/entry_list.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+{{ blog.title }}: {{ blog.description }}
+{% endblock title %}
+
 {% block navi %}
 {% include 'sidebar.html' %}
 {% endblock navi %}
@@ -7,7 +11,13 @@
 {% block main %}
 <div id="entry_list">
     {% for entry in page.object_list %}
-    <h3>{{ entry.title }}</h3>
+    <h3><a href="{{ entry.get_absolute_url }}">{{ entry.title }}</a></h3>
+    <div class="entry-meta-info">
+        Published @
+        <span class="entry-pub-time">{{ entry.pub_date|date:"DATETIME_FORMAT" }}</span>
+        by
+        <span class="entry-author">{{ entry.author.get_full_name}}</span>
+    </div>
     {% if blog.full_entry_in_page %}
         <div>{{ entry.body_html|safe }}</div>
     {% else %}
