--- a/sophie/templates/category_details.html
+++ b/sophie/templates/category_details.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-{{ category.title }}-{{ blog.title }}
+{{ category.title }} - {{ blog.title }}
 {% endblock title %}
 
 {% block navi %}
@@ -10,11 +10,19 @@
 
 {% block main %}
 <div id="page-description">
-    The content of this page is under {{ category.title }}
+    The content of this page is under {{ category.title }}.
 </div>
 
 {% for entry in page.object_list %}
-    <h2 class="entry-title">{{ entry.title }}</h2>
+    <h2><a href="{{ entry.get_absolute_url }}">{{ entry.title }}</a></h2>
+    <div class="entry-meta-info">
+        Published @
+        <span class="entry-pub-time">
+            {{ entry.pub_date|date:"DATETIME_FORMAT" }}
+        </span>
+        by
+        <span class="entry-author">{{ entry.author.get_full_name}}</span>
+    </div>
     <div class="entry-body">
     {% if blog.full_entry_in_page %}
         {{ entry.body_html|safe }}
@@ -23,6 +31,6 @@
     {% endif %}
     </div>
 {% empty %}
-    Ooops, there's nothing here yet, too bad.
+    But, there's nothing here yet, too bad.
 {% endfor %}
 {% endblock main %}
