--- a/sophie/templates/entry_details.html
+++ b/sophie/templates/entry_details.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-{{ entry.title }}-{{ blog.title }}
+{{ entry.title }} - {{ blog.title }}
 {% endblock title %}
 
 {% block navi %}
@@ -9,6 +9,14 @@
 {% endblock navi %}
 
 {% block main %}
-<h2 class="entry-title">{{ entry.title }}</h2>
+<h2><a href="{{ entry.get_absolute_url }}">{{ entry.title }}</a></h2>
+<div class="entry-meta-info">
+    Published @
+    <span class="entry-pub-time">
+        {{ entry.pub_date|date:"DATETIME_FORMAT" }}
+    </span>
+    by
+    <span class="entry-author">{{ entry.author.get_full_name}}</span>
+</div>
 <div class="entry-body">{{ entry.body_html|safe }}</div>
 {% endblock main %}
