--- a/sophie/templates/sophie/category_details.html
+++ b/sophie/templates/sophie/category_details.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'sophie/base.html' %}
 
 {% block title %}
 {{ category.title }} - {{ blog.title }}
 {% endblock title %}
 
 {% block navi %}
-{% include 'sidebar.html' %}
+{% include 'sophie/sidebar.html' %}
 {% endblock navi %}
 
 {% block main %}
