--- a/sophie/templates/sophie/entry_list.html
+++ b/sophie/templates/sophie/entry_list.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'sophie/base.html' %}
 
 {% block title %}
 {{ blog.title }}: {{ blog.description }}
 {% endblock title %}
 
 {% block navi %}
-{% include 'sidebar.html' %}
+{% include 'sophie/sidebar.html' %}
 {% endblock navi %}
 
 {% block main %}
