started using MEDIA_URL

--- a/sophie/templates/sophie/base.html
+++ b/sophie/templates/sophie/base.html
@@ -5,6 +5,7 @@
 
     <title>{% block title %}{% endblock title %}</title>
     
+    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/blueprint/ie.css"/>
 </head>
 <body class="{% block pagetype %}{% endblock pagetype %}">
     <div id="header"> 
