--- a/sophie/templates/sophie/base.html
+++ b/sophie/templates/sophie/base.html
@@ -4,8 +4,12 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
     <title>{% block title %}{% endblock title %}</title>
+
+    <link rel="stylesheet" href="css/blueprint/screen.css" type="text/css" media="screen, projection">
+    <link rel="stylesheet" href="css/blueprint/print.css" type="text/css" media="print">	
+    <!--[if lt IE 8]><link rel="stylesheet" href="css/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
+
     
-    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/blueprint/ie.css"/>
 </head>
 <body class="{% block pagetype %}{% endblock pagetype %}">
     <div id="header"> 
