--- a/sophie/templates/sophie/sidebar.html
+++ b/sophie/templates/sophie/sidebar.html
@@ -1,3 +1,4 @@
+<div><a href="{% url blog_feed blog_slug=blog.slug %}"><h3>Feed</h3></a></div>
 <h3>Category</h3>
 <ul>
     {% for category in blog.get_categories %}
