added powered-by to template

--- a/sophie/templates/sophie/base.html
+++ b/sophie/templates/sophie/base.html
@@ -35,6 +35,10 @@
 
         <div class="span-24 last" id="footer"> 
             {% block footer_extra %}{% endblock footer_extra %} 
+            <div id="powered-by"> 
+                This blog is powered by
+                <a href="http://github.com/danmarner/django-sophie/">Sophie</a> / <a href="http://djangoproject.com">Django</a>
+            </div>
         </div>
 
     </div>
