--- a/sophie/media/css/base.css
+++ b/sophie/media/css/base.css
@@ -6,6 +6,14 @@
     margin: 20px 0 20px 0;
 }
 
+#powered-by {
+    text-align: center;
+}
+
+#footer {
+    border-top: 1px solid black;
+}
+
 .entry-meta-info {
     color: #cccccc;
     margin-top: -20px;
