--- a/sophie/templates/sophie/base.html
+++ b/sophie/templates/sophie/base.html
@@ -13,6 +13,23 @@
 
     
 </head>
+
+{% if blog.g_analytics_tracking_id %}
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', '{{ blog.g_analytics_tracking_id }}']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+{% endif %}
+
 <body class="{% block pagetype %}{% endblock pagetype %}">
     <div class="container">
 
