A sitemap structure that sorta make sense

--- a/sophie/templates/sophie/base.html
+++ b/sophie/templates/sophie/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+<meta name="google-site-verification" content="4JmJ2Z91SvBaMHTVtkkqGaA5npJpRhq9nWoYnuJoHRQ" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
     <title>{% block title %}{% endblock title %}</title>
