--- a/sophie/templates/sophie/base.html
+++ b/sophie/templates/sophie/base.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<meta name="google-site-verification" content="4JmJ2Z91SvBaMHTVtkkqGaA5npJpRhq9nWoYnuJoHRQ" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="description" content="{{ blog.description }}" />
+    <link rel="alternate" type="text/rss+xml" href="{{ blog.get_feed }}" title="{{ blog.title }}" />
 
     <title>{% block title %}{% endblock title %}</title>
 
