--- a/sophie/templates/sophie/entry_details.html
+++ b/sophie/templates/sophie/entry_details.html
@@ -1,5 +1,18 @@
 {% extends 'sophie/base.html' %}
 
+{% block pre_body %}
+{% if blog.disqus_shortname %}
+<script type="text/javascript">
+var disqus_shortname = '{{ blog.disqus_shortname }}';
+(function () {
+  var s = document.createElement('script'); s.async = true;
+  s.src = 'http://disqus.com/forums/{{ blog.disqus_shortname }}/count.js';
+  (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+}());
+</script>
+{% endif %}
+{% endblock pre_body %}
+
 {% block title %}
 {{ entry.title }} - {{ blog.title }}
 {% endblock title %}
@@ -19,4 +32,22 @@
     <span class="entry-author">{{ entry.author.get_full_name}}</span>
 </div>
 <div class="entry-body">{{ entry.body_html|safe }}</div>
+
+{% if blog.disqus_shortname %}
+<hr />
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+  /**
+    * var disqus_identifier; [Optional but recommended: Define a unique identifier (e.g. post id or slug) for this thread] 
+    */
+  (function() {
+   var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+   dsq.src = 'http://danmarner-cnblog.disqus.com/embed.js';
+   (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+  })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript=danmarner-cnblog">comments powered by Disqus.</a></noscript>
+<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+{% endif %}
+
 {% endblock main %}
