--- a/sophie/templates/sophie/entry_details.html
+++ b/sophie/templates/sophie/entry_details.html
@@ -2,14 +2,15 @@
 
 {% block pre_body %}
 {% if blog.disqus_shortname %}
-<script type="text/javascript">
-var disqus_shortname = '{{ blog.disqus_shortname }}';
-(function () {
-  var s = document.createElement('script'); s.async = true;
-  s.src = 'http://disqus.com/forums/{{ blog.disqus_shortname }}/count.js';
-  (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-}());
-</script>
+    <meta name="description" content="{{ entry.teaser }}" />
+    <script type="text/javascript">
+    var disqus_shortname = '{{ blog.disqus_shortname }}';
+    (function () {
+      var s = document.createElement('script'); s.async = true;
+      s.src = 'http://disqus.com/forums/{{ blog.disqus_shortname }}/count.js';
+      (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+    </script>
 {% endif %}
 {% endblock pre_body %}
 
