added template routing logic
The template for a entry, category and anything else that has its
slug is now routed to attempt to use its unique template first,
if the attempt fails, the default template will be used. Also,
this commit gives seperate sets of templates for different blogs,
which are located under [template path]/sophie/[blog slug]/ .

More details and implementation is in sophie.utils.route_template

--- a/sophie/templates/sophie/default/entry_details.html
+++ b/sophie/templates/sophie/default/entry_details.html
@@ -1,4 +1,4 @@
-{% extends 'sophie/base.html' %}
+{% extends base_template %}
 
 {% block pre_body %}
 {% if blog.disqus_shortname %}
@@ -18,7 +18,7 @@ var disqus_shortname = '{{ blog.disqus_shortname }}';
 {% endblock title %}
 
 {% block navi %}
-{% include 'sophie/sidebar.html' %}
+{% include sidebar_template %}
 {% endblock navi %}
 
 {% block main %}
