--- a/sophie/templates/sophie/default/category_details.html
+++ b/sophie/templates/sophie/default/category_details.html
@@ -1,11 +1,11 @@
-{% extends 'sophie/base.html' %}
+{% extends base_template %}
 
 {% block title %}
 {{ category.title }} - {{ blog.title }}
 {% endblock title %}
 
 {% block navi %}
-{% include 'sophie/sidebar.html' %}
+{% include sidebar_template%}
 {% endblock navi %}
 
 {% block main %}
