--- a/sophie/templates/sophie/default/entry_list.html
+++ b/sophie/templates/sophie/default/entry_list.html
@@ -1,11 +1,11 @@
-{% extends 'sophie/base.html' %}
+{% extends base_template %}
 
 {% block title %}
 {{ blog.title }}: {{ blog.description }}
 {% endblock title %}
 
 {% block navi %}
-{% include 'sophie/sidebar.html' %}
+{% include sidebar_template %}
 {% endblock navi %}
 
 {% block main %}
@@ -18,9 +18,7 @@
             {{ entry.pub_date|date:"DATETIME_FORMAT" }}
         </span>
         by
-        <span class="entry-author">
-            {{ entry.author.get_full_name}}
-        </span>
+        <span class="entry-author"> {{ entry.author.get_full_name}} </span>
     </div>
     {% if blog.full_entry_in_page %}
         <div>{{ entry.body_html|safe }}</div>
