use select_template to do all routing

--- a/sophie/templates/sophie/default/entry_details.html
+++ b/sophie/templates/sophie/default/entry_details.html
@@ -18,7 +18,7 @@ var disqus_shortname = '{{ blog.disqus_shortname }}';
 {% endblock title %}
 
 {% block navi %}
-{% include sidebar_template %}
+{{ sidebar }}
 {% endblock navi %}
 
 {% block main %}
