--- a/sophie/templates/sophie/default/base.html
+++ b/sophie/templates/sophie/default/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <link rel="alternate" type="application/rss+xml" href="{{ blog.get_feed }}" title="{{ blog.title Feed}}" />
+    <link rel="alternate" type="application/rss+xml" href="{{ blog.get_feed }}" title="{{ blog.title}} Feed" />
 
     <title>{% block title %}{% endblock title %}</title>
 
