--- a/sophie/templates/sophie/default/entry_list.html
+++ b/sophie/templates/sophie/default/entry_list.html
@@ -1,4 +1,5 @@
 {% extends base_template %}
+{% load sophie_parts %}
 
 {% block title %}
 {{ blog.title }}: {{ blog.description }}
@@ -9,55 +10,16 @@
 {% endblock pre_body %}
 
 {% block navi %}
-{% include sidebar_template %}
+{% sophie_shows_feed_of blog %}
+{% sophie_lists_category_of blog %}
 {% endblock navi %}
 
 {% block main %}
 <div id="entry_list">
-    {% for entry in page.object_list %}
-    <h2><a href="{{ entry.get_absolute_url }}">{{ entry.title }}</a></h2>
-    <div class="entry-meta-info">
-        Published @
-        <span class="entry-pub-time">
-            {{ entry.pub_date|date:"DATETIME_FORMAT" }}
-        </span>
-        by
-        <span class="entry-author"> {{ entry.author.get_full_name}} </span>
-    </div>
-    {% if blog.full_entry_in_page %}
-        <div>{{ entry.body_html|safe }}</div>
-    {% else %}
-        <div>{{ entry.teaser_html|safe }}</div>
-    {% endif %}
-    {% endfor %}
+    {% sophie_lists_entries_in page.object_list blog %}
 </div>
 
 <div id="pagination">
-    {% if multiblog %}
-        {% if page.has_previous %}
-        <div id="previous-page-link">
-            <a href="{% url entry_list_view blog_slug=blog.slug page_num=page.previous_page_number %}">newer posts</a>
-        </div>
-        {% endif %}
-        {% if page.has_next %}
-        <div id="next-page-link">
-        <a href="{% url entry_list_view blog_slug=blog.slug page_num=page.next_page_number %}">older posts</a>
-        </div>
-        {% endif %}
-    {% else %}
-        {% if page.has_previous %}
-        <div id="previous-page-link">
-            <a href="{% url entry_list_view page_num=page.previous_page_number %}">newer posts</a>
-        </div>
-        {% endif %}
-        {% if page.has_next %}
-        <div id="next-page-link">
-        <a href="{% url entry_list_view page_num=page.next_page_number %}">older posts</a>
-        </div>
-        {% endif %}
-    {% endif %}
-        {% if page.has_other_pages %}
-        This is page {{ page.number }} of {{ page.paginator.num_pages }}
-        {% endif %}
+    {% sophie_links_siblings_of page blog %}
 </div>
-{% endblock main%}
+{% endblock main %}
