standardized the url names a little

--- a/sophie/templates/sophie/default/entry_list.html
+++ b/sophie/templates/sophie/default/entry_list.html
@@ -20,6 +20,6 @@
 </div>
 
 <div id="pagination">
-    {% sophie_links_siblings_of page blog %}
+    {% sophie_links_siblings_of page blog 'sophie_entry_list_url' %}
 </div>
 {% endblock main %}
