--- a/sophie/templates/sophie/default/category_details.html
+++ b/sophie/templates/sophie/default/category_details.html
@@ -24,6 +24,6 @@
 </div>
     
 <div id="pagination">
-    {% sophie_links_siblings_of page blog %}
+    {% sophie_links_siblings_of page blog 'sophie_category_details_url' %}
 </div>
 {% endblock main %}
