--- a/sophie/media/css/base.css
+++ b/sophie/media/css/base.css
@@ -1,30 +1,7 @@
-#header {
-    margin: 20px 0 20px 0;
-}
-
-#main-wrapper {
-    margin: 20px 0 20px 0;
-}
-
-#powered-by {
-    text-align: center;
-}
-
-#footer {
-    border-top: 1px solid black;
-}
-
-.entry-meta-info {
-    color: #cccccc;
-    margin-top: -20px;
-    margin-bottom: 20px;
-}
-
-a {
-    color: black;
-}
-
-a:hover {
-    color: red;
-}
-
+#header{margin:20px 0 20px 0;}
+#main-wrapper{margin:20px 0 20px 0;}
+#powered-by{text-align:center;}
+#footer{border-top:1px solid black;}
+.entry-meta-info{color:#cccccc;margin-top:-20px;margin-bottom:20px;}
+a{color:black;}
+a:hover{color:red;}
